--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="contents">
-            <img src="images/image-qr-code.png" alt="qr-code" width="100px">
+            <img src="images/image-qr-code.png" alt="qr-code">
             <br>
             <br>
             <h2>Improve your front-end skills by building
